# pelican-citation-processor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  citation-plugin.md  invoke.py  pyproject.toml  run_tests.py  setup_dev.py
examples/: pelicanconf.py
examples/content/: _local_bibliography.bib  article-with-local-config.md  sample-article.md
pelican-citation-processor/: .coverage  CHANGELOG.md  LICENSE  pyproject.toml
pelican-citation-processor/examples/content/: _bibliography.bib
pelican-citation-processor/pelican/plugins/citation_processor/: __init__.py
pelican-citation-processor/pelican_citation_processor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pelican-citation-processor/tests/: test_citation_processor.py
pelican/plugins/citation_processor/: __init__.py  citation_processor.py
tests/: README.md  __init__.py  conftest.py  test_citation_processor.py  test_configuration.py  test_html_processing.py  test_markdown_processing.py  test_utils.py
