[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pelican-citation-processor"
version = "0.1.0"
description = "A Pelican plugin that processes citations using Pandoc with a global bibliography file"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Pelican Citation Processor Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "pelican>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
    "invoke>=1.0",
]

[project.urls]
Homepage = "https://github.com/pelican-plugins/pelican-citation-processor"
Repository = "https://github.com/pelican-plugins/pelican-citation-processor"
Documentation = "https://github.com/pelican-plugins/pelican-citation-processor#readme"
"Bug Tracker" = "https://github.com/pelican-plugins/pelican-citation-processor/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pelican*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=pelican.plugins.citation_processor --cov-report=term-missing" 